[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aeolus-rams-phase3"
version = "1.0.0"
description = "AEOLUS-RAMS Phase 3 — RBD: turbine series system, farm k-of-N, importance measures, and sensitivity analysis"
requires-python = ">=3.10"
dependencies = [
    "aeolus-rams-phase1>=1.0.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "tabulate>=0.9"]

[project.scripts]
aeolus-rams-phase3 = "aeolus_rams_phase3.pipeline:main"

[tool.setuptools.packages.find]
include = ["aeolus_rams_phase3*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
